Reimplemented.
